fix(resolve,publish,workspace): preserve scope and resume isolation